<resources>

    <!--Meta-->
    <string name="app_name">JDApp</string>

    <!--Main-->
    <string name="main_menuTitle">JD App</string>
    <string name="main_button1">Find Hospital</string>
    <string name="main_button2">About Us</string>
    <string name="main_button3">Settings</string>
    <string name="hospital_button1">Add Hospital</string>

    <!--About-->
    <string name="aboutActivity_titleTextView"><b>About Us</b></string>

    <!--AddHospital-->
    <string name="addHospitalLayout_nameTextView">Hospital Name</string>
    <string name="addHospitalLayout_descriptionTextView">Description</string>
    <string name="addHospitalLayout_cityTextView">City</string>
    <string name="addHospitalLayout_seachTextView">Search</string>
    <string name="addHospitalActivity_submitButton">Submit</string>
    <string name="addHospitalLayout_searchInput">Search Hospital</string>
    <!--Alert-->
    <string name="alert_positiveButton">Yes</string>
    <string name="alert_negativeButton">No</string>
    <string name="alert_neutralButton">Cancel</string>
    <string name="alert_warningTitle">Warning</string>
    <string name="alert_emptyHospitalNameField">The hospital name cannot be empty!</string>
    <string name="alert_emptyHospitalDescriptionField">The hospital description cannot be empty!</string>
    <string name="alert_emptyHospitalCityField">The hospital city cannot be empty!</string>
    <string name="alert_saveHospitalMessage">Do you want to save the current hospital?</string>

    <!--Details-->
    <string name="hospitalDetailsActivity_name">Name: </string>
    <string name="hospitalDetailsActivity_description">Description: </string>
    <string name="hospitalDetailsActivity_city">City: </string>
    <string name="hospitalDetailsActivity_temperature">Temperature: </string>

    <!--FilterList-->
    <string name="filterAdapter_title">Title</string>
    <string name="filterAdapter_description">Description</string>
    <string name="filterAdapter_city">City</string>
    <string name="filterAdapter_temp">Temperature</string>

</resources>
